; ModuleID = '/home/carl/AnghaBench/systemd/src/network/extr_networkd-route.c_format_route_scope.c'
source_filename = "/home/carl/AnghaBench/systemd/src/network/extr_networkd-route.c_format_route_scope.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"%d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @format_route_scope(i32 %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load i8*, i8** %5, align 8
  store i8* %9, i8** %8, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i8* @route_scope_to_string(i32 %10)
  store i8* %11, i8** %7, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %3
  %15 = load i64, i64* %6, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = call i32 @strpcpy(i8** %8, i64 %15, i8* %16)
  br label %22

18:                                               ; preds = %3
  %19 = load i64, i64* %6, align 8
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @strpcpyf(i8** %8, i64 %19, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %20)
  br label %22

22:                                               ; preds = %18, %14
  %23 = load i8*, i8** %5, align 8
  ret i8* %23
}

declare dso_local i8* @route_scope_to_string(i32) #1

declare dso_local i32 @strpcpy(i8**, i64, i8*) #1

declare dso_local i32 @strpcpyf(i8**, i64, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
